tests/spec/emit/snapshots/cast_int_to_rune.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> rune {
    65 as rune
  }
---
package main

func test() rune {
	return rune(65)
}
