tests/spec/emit/snapshots/cast_of_a_constant_through_an_alias_keeps_the_conversion.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  type Count = int
  
  fn pinned() -> Count {
    1 as Count
  }
  
  fn test() {
    if pinned() != 1 { panic("a pinned constant should keep its value") }
  }
---
package main

type Count = int

func pinned() Count {
	return Count(1)
}

func test() {
	if pinned() != 1 {
		panic("a pinned constant should keep its value")
	}
}
