tests/spec/emit/snapshots/cast_of_a_parenthesized_operand_emits_one_pair.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn gray(r: int, g: int) -> uint8 {
    ((r / 256 + g / 256) / 2) as uint8
  }
---
package main

func gray(r, g int) uint8 {
	return uint8((r/256 + g/256) / 2)
}
