tests/spec/emit/snapshots/cast_precedence_with_addition.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> float64 {
    let a: int = 1;
    let b: int = 2;
    a as float64 + b as float64
  }
---
package main

func test() float64 {
	a := 1
	b := 2
	return float64(a) + float64(b)
}
