tests/spec/emit/snapshots/cast_rune_to_string.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  fn test() -> string {
    'A' as string
  }
---
package main

func test() string {
	return string('A')
}
