tests/spec/emit/snapshots/cast_shift_forward_alias_const_emitted_as_var_pins.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  const SHIFT = LATER
  const LATER = 60 + 8
  
  fn scale() -> float64 {
    (1 << SHIFT) as float64
  }
---
package main

var Shift int = Later

const Later int = 60 + 8

func scale() float64 {
	return float64(int((1 << Shift)))
}
