tests/spec/emit/snapshots/cast_shift_imported_const_count_no_pin_but_var_count_pins.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  import "go:math"
  import "go:runtime"
  
  fn const_count() -> float64 {
    (1 << math.MaxInt8) as float64
  }
  
  fn var_count() -> float64 {
    (1 << runtime.MemProfileRate) as float64
  }
---
package main

import (
	"math"
	"runtime"
)

func constCount() float64 {
	return float64(1 << math.MaxInt8)
}

func varCount() float64 {
	return float64(int(1 << runtime.MemProfileRate))
}
