tests/spec/emit/snapshots/cast_shift_with_const_count_needs_no_pin.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  const SHIFT = 60 + 8
  
  fn scale() -> float64 {
    (1 << SHIFT) as float64
  }
---
package main

const Shift int = 60 + 8

func scale() float64 {
	return float64(1 << Shift)
}
